# 42sh

./: CMakeLists.txt
doc/: 42sh.1  CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  main.c
src/builtin/: CMakeLists.txt  builtin.h  builtin_break.c  builtin_cd.c  builtin_continue.c  builtin_echo.c  builtin_exit.c
src/execution/: CMakeLists.txt  exec_and_or.c  exec_assignement_word.c  exec_case.c  exec_cmd.c  exec_command.c  exec_compound_list.c  exec_do_group.c  exec_else_clause.c  exec_funcdec.c  exec_input.c  exec_list.c  exec_pipeline.c  exec_quoting.c  exec_redirect.c  exec_redirect_append_output.c  exec_redirect_dup_input.c  exec_redirect_dup_output.c  exec_redirect_input.c  exec_redirect_rdwr.c  exec_redirection.c  exec_root.c  exec_rule_for.c  exec_rule_if.c  exec_rule_until.c  exec_rule_while.c  exec_shell_command.c  exec_simple_command.c  exec_substitution_cmd.c  exec_value.c  exec_variable_substitution.c  execution.h
src/lexer/: CMakeLists.txt  create_lexer.c  create_tab.c  create_token.c  free_token.c  get_type.c  input_type.c  lexer.c  lexer.h  peek.c  pop.c  token_type.h
src/parser/: CMakeLists.txt  add_child.c  and_or.c  case_clause.c  case_item.c  command.c  compound_list.c  create_node.c  do_group.c  element.c  else_clause.c  free_ast.c  funcdec.c  input.c  list.c  node_type.h  parser.c  parser.h  pipeline.c  prefix.c  root.c  rule_case.c  rule_for.c  rule_if.c  shell_command.c  simple_command.c  until_rule.c  while_rule.c
src/parser/redirection/: CMakeLists.txt  redirect_append_output.c  redirect_dup_input.c  redirect_dup_output.c  redirect_here_document.c  redirect_input.c  redirect_output.c  redirect_read_write.c  redirect_utils.c  redirection.c  redirection.h
src/print_ast/: CMakeLists.txt  print_ast.c  print_ast.h
src/utils/: CMakeLists.txt  xmalloc.c  xmalloc.h
tests/: CMakeLists.txt  conftest.py  func_test.sh  shell_redirection.txt  test.yaml  test_command_substitution.c  test_echo_builtin.c  test_get_token.c  test_get_type.c  test_parser_if.c  test_parser_prefix.c  test_redirection.c  test_variable.c  test_variable_substitution.c
tests/test_case/: case_expanded.sh  case_expanded2.sh  case_expanded3.sh  simple_case.sh
tests/tests_for/: error_for.sh  simple_for.sh
tests/tests_function/: multiple_function.sh
tests/tests_if/: double_else_error.sh  double_error_echo_a.sh  if_and_or.sh  if_bad_and.sh  if_bad_or.sh  if_or.sh  simple_echo_a.sh  simple_elif.sh  simple_elif_error.sh  simple_else.sh  simple_else_error.sh  simple_else_error_else.sh  simple_else_error_then.sh  simple_error_echo_a.sh  simple_error_echo_a_then.sh  triple_else_error.sh
